Issue #13014: Fix a possible reference leak in SSLSocket.getpeercert().